Fix dropdown button on mobile

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -33,4 +33,8 @@
     .navbar .home-link span.can-hide {
         display: contents;
     }
+
+    .dropdown-wrapper .dropdown-title {
+        display: unset;
+    }
 }
